# aequilibrium

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
aequilibrium/: __init__.py  balance.py  dataset.py  model.py  results.py  visualize.py
aequilibrium/utils/: __init__.py  api_wrapper.py
docs/Examples/: Quickstart.ipynb  demo_notebook.ipynb  imbalanced_classification_blog.ipynb
docs/Examples/data/: kaggle_stroke_results.csv
docs/Release Notes/: index.rst
tests/: __init__.py  test_dataset.py  test_package.py  test_results.py
