[tool.poetry]
name = "aequilibrium"
version = "1.0.0"
description = "Python package for classification of imbalanced data."
authors = ["Luke Beasley <beasleyl2@aetna.com>",
    "Lin Han <hanl1@aetna.com>",
    "Matthew Trudeau <trudeaum@aetna.com>",
    "Alex Xu <alex.xu2@cvshealth.com>",
    "Jason Dwyer <DwyerJ1@aetna.com>",]
maintainers = [
    "Luke Beasley <beasleyl2@aetna.com>",
    "Lin Han <hanl1@aetna.com>",
    "Matthew Trudeau <trudeaum@aetna.com>",
    "Alex Xu <alex.xu2@cvshealth.com>",
    "Jason Dwyer <DwyerJ1@aetna.com>",
]
repository = "https://github.aetna.com/analytics-org/aequilibrium"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8"
numpy = "^1.21"
pandas = "^1.3"
imbalanced-learn = "<0.9"
scikit-learn = "<1.1"
matplotlib = "<3.6"
seaborn = "<0.12"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
hypothesis = "^6.58.0"
pre-commit = "2.19.0"
nbqa = "^1.5.1"
black = "^22.3.0"
isort = "^5.9.3"
mypy = "^0.961"
pylint = "^2.12.2"
jupyter = "^1.0.0"

[tool.isort]
py_version=37
profile="black"
src_paths=["aequilibrium", "tests"]
known_first_party=[]
known_third_party=[]
known_future_library=["__future__"]
sections=["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma="true"
ignore_whitespace="false"

[tool.mypy]
python_version="3.7"
ignore_missing_imports=true
strict=true
implicit_reexport = true

[tool.pylint.main]
py-version="3.7.13"

[tool.pylint.messages_control]
max-line-length=120

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
